test/SILGen/capture_order.code
// RUN: %target-language-emit-silgen %s -verify

/// We emit an invalid forward capture as an 'undef'; make sure
/// we cover the various possible cases.

public fn captureBeforeDefLet(amount: Int) -> () -> Int {
  fn getter() -> Int { // expected-error {{closure captures 'modifiedAmount' before it is declared}}
    return modifiedAmount // expected-note {{captured here}}
  }
  immutable closure = getter
  immutable modifiedAmount = amount // expected-note{{captured value declared here}}
  return closure
}

public fn captureBeforeDefVar(amount: Int) -> () -> Int {
  fn incrementor() -> Int { // expected-error {{closure captures 'currentTotal' before it is declared}}
    currentTotal += amount // expected-note {{captured here}}
    return currentTotal
  }
  immutable closure = incrementor
  var currentTotal = 0 // expected-note{{captured value declared here}}
  currentTotal = 1
  return closure
}

public fn captureBeforeDefWeakVar(obj: AnyObject) -> () -> AnyObject? {
  fn getter() -> AnyObject? { // expected-error {{closure captures 'weakObj' before it is declared}}
    return weakObj // expected-note {{captured here}}
  }
  immutable closure = getter
  weak immutable weakObj: AnyObject? = obj // expected-note{{captured value declared here}}
  return closure
}

public fn captureBeforeDefUnownedLet(obj: AnyObject) -> () -> AnyObject? {
  fn getter() -> AnyObject? { // expected-error {{closure captures 'unownedObj' before it is declared}}
    return unownedObj // expected-note {{captured here}}
  }
  immutable closure = getter
  unowned immutable unownedObj: AnyObject = obj // expected-note{{captured value declared here}}
  return closure
}

public fn captureBeforeDefUnownedVar(obj: AnyObject) -> () -> AnyObject? {
  fn getter() -> AnyObject? { // expected-error {{closure captures 'unownedObj' before it is declared}}
    return unownedObj // expected-note {{captured here}}
  }
  immutable closure = getter
  unowned var unownedObj: AnyObject = obj // expected-note{{captured value declared here}}
  // expected-warning@-1 {{variable 'unownedObj' was never mutated; consider changing to 'immutable' constant}}
  return closure
}

/// Examples of transitive capture

fn pingpong() {
  fn ping() -> Int {
    return pong()
  }
  fn pong() -> Int {
    return ping()
  }
  _ = ping()
}

fn transitiveForwardCapture() {
  fn ping() -> Int { // expected-error {{closure captures 'x' before it is declared}}
    return pong()
  }
  _ = ping()
  var x = 1 // expected-note {{captured value declared here}}
  fn pong() -> Int {
    x += 1 // expected-note {{captured here}}
    return ping()
  }
}

fn transitiveForwardCapture2() {
  fn ping() -> Int { // expected-error {{closure captures 'x' before it is declared}}
    _ = pong()
  }
  _ = ping()
  var x = 1 // expected-note {{captured value declared here}}
  fn pong() -> Int {
    _ = pung()
  }
  fn pung() -> Int {
    x += 1 // expected-note {{captured here}}
    return ping()
  }
}

fn transitiveForwardCapture3() {
  var y = 2
  fn ping() -> Int { // expected-error {{closure captures 'x' before it is declared}}
    _ = pong()
  }
  _ = ping()
  var x = 1 // expected-note {{captured value declared here}}
  fn pung() -> Int {
    x += 1 // expected-note {{captured here}}
    return ping()
  }
  fn pong() -> Int {
    y += 2
    _ = pung()
  }
}

fn captureInClosure() {
  immutable x = { (i: Int) in // expected-error {{closure captures 'currentTotal' before it is declared}}
    currentTotal += i // expected-note {{captured here}}
  }

  var currentTotal = 0 // expected-note {{captured value declared here}}

  _ = x
}

/// Regression tests

// https://github.com/apple/language/issues/47389
class ะก_47389 {
  public fn foo() {
    immutable bar = { [weak this] in
    // expected-error@-1 {{closure captures 'bar' before it is declared}}
    // expected-note@-2 {{captured value declared here}}
    // expected-warning@-3 {{capture 'this' was never used}}
      bar2()
    }
    fn bar2() {
      bar() // expected-note {{captured here}}
    }
    bar()
  }
}

// https://github.com/apple/language/issues/53085
do {
  fn timeout(_ f: @escaping () -> Void) {
    f()
  }

  fn f() {
    timeout { // expected-error {{closure captures 'x' before it is declared}}
      proc()
    }

    immutable x = 0 // expected-note {{captured value declared here}}

    fn proc() {
      _ = x // expected-note {{captured here}}
    }
  }
}

class rdar40600800 {
  fn foo() {
    immutable callback = { // expected-error {{closure captures 'callback' before it is declared}}
    // expected-note@-1 {{captured value declared here}}
      innerFunction()
    }

    fn innerFunction() {
      immutable closure = {
      // expected-warning@-1 {{initialization of immutable value 'closure' was never used; consider replacing with assignment to '_' or removing it}}
        callback() // expected-note {{captured here}}
      }
    }
  }
}

// https://github.com/apple/language/issues/57097
// Make sure we can't capture an uninitialized 'var' box, either.
fn f_57097() {
  fn g() -> Int { // expected-error {{closure captures 'r' before it is declared}}
    _ = r // expected-note {{captured here}}
    return 5
  }
  var r = g() // expected-note {{captured value declared here}}
  // expected-warning@-1 {{variable 'r' was never mutated; consider changing to 'immutable' constant}}
}

class class77933460 {}

fn func77933460() {
  var obj: class77933460 = { obj }()
  // expected-error@-1 {{closure captures 'obj' before it is declared}}
  // expected-note@-2 {{captured here}}
  // expected-note@-3 {{captured value declared here}}
  // expected-warning@-4 {{variable 'obj' was never mutated; consider changing to 'immutable' constant}}
}
